# ros-drone

./: .gitignore  DEVELOPMENT_PLAN.md  IMPLEMENTATION_ANALYSIS.md  NEXT_STEPS.md  QUICKSTART_EXPERIMENTS.md  QUICK_START_ROS2.md  README.md  ROS_SMOKE_TEST.md  TESTING.md  debug_obstacle_topology.py  main.py  noxfile.py  pyproject.toml  pytest.ini  test_integration_window.py
docs/: ALGORITHMIC_SOLUTION_EXPLAINED.md  ARCHITECTURE.md  AUDIT_RESPONSE_SUMMARY.md  BETTI_GAP_EXECUTIVE_SUMMARY.md  BETTI_GAP_FINDINGS_AND_SOLUTIONS.md  BETTI_GAP_INVESTIGATION_STATUS.md  BETTI_USAGE_GUIDE.md  CONTROLLER_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  LEGACY_CODE.md  NEXT_DEVELOPMENT_STEPS.md  NEXT_STEPS.md  PARAMETER_SWEEPS_EXPLAINED.md  PHASE3_IMPROVEMENTS.md  PROJECT_STATUS.md  ROS2_MACOS_INSTALL.md  ROS_INTEGRATION_SUMMARY.md  ROS_RUNNING_INSTRUCTIONS.md  TECHNICAL_AUDIT_RESPONSE.md  WHY_B1_EQUALS_1.md  hoffman_2016_analysis.md  paper_parameter_mapping.md  ros2_policy_integration.md  rosbag_workflow.md  rubin_2014_analysis.md  run_logging.mdc  running_experiments.md  topological_mapping_usage.md  troubleshooting.md  yartsev_2011_analysis.md
examples/: __init__.py  betti_numbers_demo.py  integration_window_demo.py  multiple_obstacles_demo.py  obstacle_environment_demo.py  policy_demo.py  rstdp_policy_demo.py  snn_policy_demo.py  topology_learning_visualization.py
experiments/: __init__.py  collect_imitation.py  extract_bat_diagnostics.py  hpo_snntorch.py  parameter_sweep.py  parameter_sweep_config.yaml  (+10 more)
ros2_ws/src/hippocampus_ros2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hippocampus_ros2/config/: brain.yaml  policy.yaml
ros2_ws/src/hippocampus_ros2/hippocampus_ros2/nodes/: brain_node.py  mission_publisher.py  policy_node.py
ros2_ws/src/hippocampus_ros2/launch/: mission_publisher.launch.py  tracing.launch.py
ros2_ws/src/hippocampus_ros2/resource/: hippocampus_ros2
ros2_ws/src/hippocampus_ros2/scripts/: record_brain_topics.sh  replay_odom.sh
ros2_ws/src/hippocampus_ros2/system_tests/scripts/: assert_topics.py
ros2_ws/src/hippocampus_ros2/test/: test_brain_launch.py
ros2_ws/src/hippocampus_ros2_msgs/: CMakeLists.txt  README.md
ros2_ws/src/hippocampus_ros2_msgs/msg/: GraphNode.msg  MissionGoal.msg  PolicyDecision.msg
(+217 files in other folders)
