<?xml version="1.0"?>
<package format="3">
  <name>hippocampus_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 integration package for hippocampus_core controllers.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>hippocampus_core</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
